# OpenEnroth

./: .gitignore  .gitmodules  CMakeLists.txt
parser/: generate-monster-info-parser.bat  generate-monsters-parser.bat  generate-symbol-matcher.bat  monster-info-parser-template.pgt  monsters-parser-min-template.pgt  monsters-parser-template.pgt  monsters-parser.grm  preprocess.py  symbol-matcher-header-template.pgt  symbol-matcher-source-template.pgt  symbols.grm
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameIocContainer.cpp  GameIocContainer.h  GameKeyboardController.cpp  GameKeyboardController.h  GameMenu.cpp  GameMenu.h  GameOptions.cpp  GameOptions.h  GameOver.cpp  GamePathResolver.cpp  GamePathResolver.h  GameStarter.cpp  GameStarter.h  GameStarterOptions.h  GameTraceHandler.cpp  GameTraceHandler.h  GameWindowHandler.cpp  GameWindowHandler.h  main.cpp
src/Arcomage/: Arcomage.cpp  Arcomage.h  CMakeLists.txt
src/Engine/: AssetsManager.cpp  AssetsManager.h  AttackList.cpp  AttackList.h  Autonotes.h  Awards.h  CMakeLists.txt  Conditions.cpp  Conditions.h  Engine.cpp  Engine.h  EngineFactory.cpp  EngineFactory.h  EngineGlobals.cpp  EngineGlobals.h  EngineIocContainer.cpp  EngineIocContainer.h  ErrorHandling.cpp  ErrorHandling.h  Events.cpp  Events.h  Events2D.h  LOD.cpp  LOD.h  Localization.cpp  Localization.h  MM7.h  MapInfo.cpp  MapInfo.h  MapsLongTimer.h  OurMath.cpp  OurMath.h  Party.cpp  Party.h  SaveLoad.cpp  SaveLoad.h  SpawnPoint.h  SpellFxRenderer.cpp  SpellFxRenderer.h  Time.cpp  (+9 more)
src/Engine/Components/Control/: CMakeLists.txt  EngineControlComponent.cpp  EngineControlComponent.h  EngineControlState.h  EngineControlStateHandle.h  EngineController.cpp  EngineController.h
src/Engine/Components/Trace/: CMakeLists.txt  EngineTraceComponent.cpp  EngineTraceComponent.h  EngineTraceConfigurator.cpp  EngineTraceConfigurator.h  EngineTracePlayer.cpp  EngineTracePlayer.h  EngineTraceRecorder.cpp  EngineTraceRecorder.h
src/Engine/TextParsers/: CMakeLists.txt
src/Engine/TextParsers/MonsterInfoParser/: MonsterInfoParser.hpp  MonsterInfoParserGrammar.hpp
src/Engine/TextParsers/SymbolMatcher/: SymbolMatcher.cpp  SymbolMatcher.hpp  SymbolMatcherMiniParser.hpp
src/GUI/: CMakeLists.txt  GUIBountyHunting.cpp  GUIBountyHunting.h  GUIButton.cpp  GUIButton.h  GUIDialogues.h  GUIEnums.h  GUIFont.cpp  GUIFont.h  GUIProgressBar.cpp  GUIProgressBar.h  GUIWindow.cpp  (+1 more)
(+260 files in other folders)
